--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PhotoViewer</title>
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <h1>フォトビューアー</h1>
@@ -14,6 +15,8 @@
         <button class="prevButton">前へ</button>
         <button class="nextButton">次へ</button>
       </div>
+      <h2>利用している画像</h2>
+      <ul class="images"></ul>
     </div>
     <script src="./main.js"></script>
   </body>
